tests/sksl/errors/ReservedNameTemplate.glsl
### Compilation failed:

error: 1: 'template' is a reserved word
int template;
    ^^^^^^^^
1 error
